--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteBase /
 RewriteRule ^index.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.+)$ tckhcn.uneti.vn/index.php [QSA,L]
+RewriteRule ^(.+)$ tckhcn-uneti.vn/index.php [QSA,L]
